--- a/main.html
+++ b/main.html
@@ -63,6 +63,9 @@
         <h2>Einführung</h2>
         <p>Dies ist eine Beispiel-Startseite, die eine einfache Navigation, Header, Footer und einen Hauptinhalt enthält.</p>
         <p>Hier kannst du deinen gewünschten Text und Inhalt hinzufügen, um deine Webseite einzigartig zu machen.</p>
+        <h3>Download</h3>
+        <p>Klicke auf den folgenden Link, um die Setup-Datei herunterzuladen:</p>
+        <a href="Versions/1.1/setup.exe" download>Setup herunterladen</a>
     </main>
 
     <footer>
