--- a/index.html
+++ b/index.html
@@ -12,19 +12,16 @@
     </header>
 
     <nav>
-        <a href="#home">Home</a>
-        <a href="#about">Über uns</a>
-        <a href="#services">Dienstleistungen</a>
-        <a href="#contact">Kontakt</a>
     </nav>
 
     <main>
-        <h2>Einführung</h2>
-        <p>Dies ist eine Beispiel-Startseite, die eine einfache Navigation, Header, Footer und einen Hauptinhalt enthält.</p>
-        <p>Hier kannst du deinen gewünschten Text und Inhalt hinzufügen, um deine Webseite einzigartig zu machen.</p>
-        <h3>Download</h3>
-        <p>Klicke auf den folgenden Link, um die Setup-Datei herunterzuladen:</p>
-        <a href="Versions/1.1/setup.exe" download>Setup herunterladen</a>
+        <h2>Willkommen</h2>
+        <p>Diese Seite dient der Puplikation neuer Tools</p>
+        <p>Viel Spaß!</p>
+        <h3>TaskJourney</h3>
+        <p>Dieses Programm dient um Aböäufe klar zu strukturieren. </p>
+        <p>Bedeinungsanleitungen, Prozessverläufe, etc. </p>
+        <a href="Versions/1.1/setup.exe" download>TaskJourney herunterladen</a>
     </main>
 
     <footer>
