--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Willkommen auf der Startseite</h1>
+        <h1>Koding - Vom Kot zum Code</h1>
     </header>
 
     <nav>
@@ -25,7 +25,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Deine Webseite. Alle Rechte vorbehalten.</p>
+        <p>&copy; 2024 Koding. Alle Rechte vorbehalten.</p>
     </footer>
 </body>
 </html>
