--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <p>Diese Seite dient der Puplikation neuer Tools</p>
         <p>Viel Spaß!</p>
         <h3>TaskJourney</h3>
-        <p>Dieses Programm dient um Aböäufe klar zu strukturieren. </p>
-        <p>Bedeinungsanleitungen, Prozessverläufe, etc. </p>
+        <p>Dieses Programm dient um Abläufe klar zu strukturieren. </p>
+        <p>Bedienungsanleitungen, Prozessverläufe, etc. </p>
         <a href="Versions/1.1/setup.exe" download>TaskJourney herunterladen</a>
     </main>
 
