--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <h3>TaskJourney</h3>
         <p>Dieses Programm dient um Abläufe klar zu strukturieren. </p>
         <p>Bedienungsanleitungen, Prozessverläufe, etc. </p>
-        <a href="Versions/1.1/TaskJourney_MSIX.exe" download>TaskJourney herunterladen</a>
+        <a href="Versions/1.1/TaskJourney_MSIX.msix" download>msix TaskJourney herunterladen</a>
+        <a href="Versions/1.1/TaskJourney.exe" download>TaskJourney exe TaskJourney herunterladen</a>
+        <a href="Versions/1.1/setup.exe" download>setup exe TaskJourney herunterladen</a>
     </main>
 
     <footer>
