--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <main>
         <h2>Willkommen</h2>
-        <p>Diese Seite dient der Puplikation neuer Tools</p>
+        <p>Diese Seite dient der Publikation neuer Tools</p>
         <p>Viel Spaß!</p>
         <h3>TaskJourney</h3>
         <p>Dieses Programm dient um Abläufe klar zu strukturieren. </p>
