--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
         <p>Viel Spaß!</p>
         <h3>TaskJourney</h3>
         <p>Dieses Programm dient um Abläufe klar zu strukturieren. </p>
-        <p>Bedienungsanleitungen, Prozessverläufe, etc. </p>
+        <p>TaskJourney_MSIX.msix</p>
         <a href="Versions/1.1/TaskJourney_MSIX.msix" download>msix TaskJourney herunterladen</a>
-        
+        <p>TaskJourney.exe</p>
         <a href="Versions/1.1/TaskJourney.exe" download>TaskJourney exe TaskJourney herunterladen</a>
+        <p>setup.exe</p>
         <a href="Versions/1.1/setup.exe" download>setup exe TaskJourney herunterladen</a>
-        
+        <p>TaskJourney_1.0.1.0_x64.msix</p>
+        <a href="Versions/1.1/TaskJourney_1.0.1.0_x64.msix" download>setup exe TaskJourney herunterladen</a>
     </main>
 
     <footer>
