--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </nav>
 
     <main>
-        <h2>Willkommen</h2>
+        <h2>Willkommen!</h2>
         <p>Diese Seite dient der Publikation neuer Tools</p>
         <p>Viel Spaß!</p>
         <h3>TaskJourney</h3>
