--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         <a href="Versions/1.1/setup.exe" download>setup exe TaskJourney herunterladen</a>
         <p>TaskJourney_1.0.1.0_x64.msix</p>
         <a href="Versions/1.1/TaskJourney_1.0.1.0_x64.msix" download>setup exe TaskJourney herunterladen</a>
+        <p>TaskJourney.msix</p>
+        <a href="Versions/1.1/TaskJourney.msix" download>setup exe TaskJourney herunterladen</a>
     </main>
 
     <footer>
