--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h3>TaskJourney</h3>
         <p>Dieses Programm dient um Abläufe klar zu strukturieren. </p>
         <h4>Wie werden meine Daten verarbeitet?</h4>
-        <a href="Versions/1.1/Datenverarbeitungtxt" download>Datenverarbeitung TaskJourney</a>
+        <a href="Versions/1.1/Datenverarbeitung.txt" download>Datenverarbeitung TaskJourney</a>
     </main>
 
     <footer>
